Revert "Базовый пак улучшений"